fix(관심사 관리): 관심사 서비스 코드 리팩토링
타입추론 관련에러 발생으로 관심사 서비스 코드 수정